# zenodo-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  live-daily.yml  live-weekly.yml
docs/: live-sandbox-ci.md
src/: client.rs  client_uploader_traits_impl.rs  downloads.rs  endpoint.rs  error.rs  ids.rs  lib.rs  links.rs  metadata.rs  model.rs  pagination.rs  poll.rs  progress.rs  records.rs  serde_util.rs  upload.rs  workflow.rs
tests/: mock_api.rs  mock_support.rs  sandbox_heavy.rs  sandbox_light.rs
tests/support/: mod.rs
