[package]
name = "zenodo-rs"
version = "0.1.2"
edition = "2021"
rust-version = "1.86"
description = "Rust client for Zenodo deposition workflows, record retrieval, and artifact downloads."
license = "MIT"
repository = "https://github.com/LucaCappelletti94/zenodo-rs"
readme = "README.md"
keywords = ["zenodo", "doi", "publishing", "downloads"]
categories = ["api-bindings", "science"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls-tls"]
checksums = ["dep:md-5", "dep:hex"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
hex = { version = "0.4", optional = true }
md-5 = { version = "0.11", optional = true }
mime = "0.3"
mime_guess = "2.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "stream"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
axum = "0.8"
http-body-util = "0.1"
serde_json = "1.0"
