[package]
name = "zenodo-rs"
version = "0.1.6"
edition = "2021"
rust-version = "1.86"
description = "Rust client for Zenodo deposition workflows, record retrieval, and artifact downloads."
license = "MIT"
repository = "https://github.com/LucaCappelletti94/zenodo-rs"
readme = "README.md"
keywords = ["zenodo", "doi", "publishing", "downloads"]
categories = ["api-bindings", "science"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["rustls-tls"]
checksums = ["dep:md-5", "dep:hex"]
indicatif = ["dep:indicatif"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls"]

[dependencies]
bytes = "1.11.1"
client-uploader-traits = "0.1.0"
chrono = { version = "0.4.44", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
hex = { version = "0.4.3", optional = true }
indicatif = { version = "0.17.11", optional = true }
md-5 = { version = "0.11.0", optional = true }
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "query", "stream"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["io"] }
url = { version = "2.5.8", features = ["serde"] }

[dev-dependencies]
axum = "0.8.9"
http-body-util = "0.1.3"
serde_json = "1.0.149"
